package solid.dip.compliant;

public interface PrinterService {

    public void print(String text);
}
