' Generated by UML Generator
' Encoded: ZP7D2i8m48JlUOezMhN5SmzImOi7GQWl49Er1jkq9DiY_hoxIMr1WuANm6PcFeRTp18tr5ObisUb6svu1QBargw8Z3gqX1jHwrnT4HRif2I2K4QKo5ZlWdKjsWerRRdc1HguCO2Oy48fv0wW2pytEPfE2KnXvxu8pJ1xBNRFBA1CtW5p-1MFV9HBkNVkZqYKGbShwUN69qRyP1GUO_q1sDT-UR-2dB_t7Rd0eCGVqN17qpWE5p7sI9BxCjGorD8Tw0a
' URL: http://www.plantuml.com/plantuml/uml/ZP7D2i8m48JlUOezMhN5SmzImOi7GQWl49Er1jkq9DiY_hoxIMr1WuANm6PcFeRTp18tr5ObisUb6svu1QBargw8Z3gqX1jHwrnT4HRif2I2K4QKo5ZlWdKjsWerRRdc1HguCO2Oy48fv0wW2pytEPfE2KnXvxu8pJ1xBNRFBA1CtW5p-1MFV9HBkNVkZqYKGbShwUN69qRyP1GUO_q1sDT-UR-2dB_t7Rd0eCGVqN17qpWE5p7sI9BxCjGorD8Tw0a
' Generated on: 2026-03-19T15:10:04.010280

@startuml
skinparam classAttributeIconSize 0
hide circle

class DocumentManager {
  -text: String
  -pService: PrinterService
  --
  +DocumentManager(text: String, pService: PrinterService)
  +addText(text: String): void
  +printDocument(): void
}

class Printer {
  +print(text: String): void
}

interface PrinterService {
  +print(text: String): void
}

DocumentManager *-- PrinterService
Printer ..|> PrinterService
@enduml